crates/swc_css_parser/tests/errors/rome/invalid/min-or-max/output.stderr
error: Expected ")"
 --> $DIR/tests/errors/rome/invalid/min-or-max/input.css:2:18
  |
2 |     width: min(500px;
  |                     ^

